Animated blue hint arrow, and added a text bubble
Orange button for "try with new molecules"
# 0.00.17 (51781) May 10, 2011
# 0.00.16 (51779) May 10, 2011
# 0.00.15 (51777) May 10, 2011
Included all possible molecules that can be made with the kits
Improved kit selection on 3rd tab
Improved bucket-atom handling
# 0.00.14 (51582) May 5, 2011
Changed single bond breaking cursor to scissors
3D icon has bolder text
# 0.00.13 (51325) Apr 29, 2011
Using new 3D icon and changed cursor for "breaking" bonds
# 0.00.12 (51317) Apr 29, 2011
Added i18n for molecule names
Molecules push each other relative to their approximate molecular weight
Added single bond break user interface (cursor with arrows), and developer control to disable it if desired
Changed icons for 3D view and break molecule
Added developer control to make "Reset kit" not touch molecules in collection boxes
# 0.00.11 (51284) Apr 27, 2011
Moved "Reset kit" button to the upper-left of kit area
Removed "duplicate" molecule definitions
Added in structural formulas, taking into account alcohol (hydroxyl) groups
# 0.00.10 (51253) Apr 27, 2011
Removed text on blue hint arrow
Jmol 3D view uses same color scheme for atoms
# 0.00.09 (51242) Apr 27, 2011
Added blue "Collect your molecule!" arrow on 1st molecule that can be collected
While 3D view is open for a molecule, its '+' for 3D view button is grayed out (disabled)
Can only open 1 3D view for each molecule, and it closes whenever the molecule is hidden (broken, kit changes, put in collection box, etc)
Showing of 3D view dialog is immediate, and shows a "loading" message.
Bugfix: added NO2 as a potential molecule
# 0.00.08 (51043) Apr 21, 2011
Added developer controls to allow generation of all molecules for boxes AND/OR allowing isotopes of the target molecule in collection boxes
Reset kit fixes
Moved kit arrows/label and reset button
Show only molecule name above molecules
# 0.00.07 (51020) Apr 21, 2011
4/21/11 Bugfix
# 0.00.06 (51012) Apr 21, 2011