@@ -1,6 +1,5 @@
 I18nize text bubble
 Prevent 4 heavy atoms in a "square".
-Once an atom is selected and dragged close to another atom, it goes behind the atom. Can selected atoms that are being manipulated remain in front?
 View 3D button from collection box
 Add BCE sound ding + bottom of collection box
 Process molecule lists instead of (<=4 heavy) to (works with our kits)
