@@ -10,6 +10,7 @@ import edu.colorado.phet.buildamolecule.model.AtomModel;
 import edu.colorado.phet.buildamolecule.model.Bucket;
 import edu.colorado.phet.buildamolecule.model.Kit;
 import edu.colorado.phet.buildamolecule.model.MoleculeStructure;
+import edu.colorado.phet.chemistry.model.Atom;
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
@@ -35,6 +36,9 @@ public class KitView {
     private Map<MoleculeStructure, MoleculeMetadataNode> metadataMap = new HashMap<MoleculeStructure, MoleculeMetadataNode>();
     private Map<MoleculeStructure, MoleculeBondContainerNode> bondMap = new HashMap<MoleculeStructure, MoleculeBondContainerNode>();
 
+    // store the node-atom relationships
+    private Map<Atom, AtomNode> atomNodeMap = new HashMap<Atom, AtomNode>();
+
     public KitView( final Frame parentFrame, final Kit kit, final ModelViewTransform mvt, BuildAMoleculeCanvas canvas ) {
         this.kit = kit;
         this.mvt = mvt;
@@ -48,6 +52,7 @@ public class KitView {
 
             for ( final AtomModel atom : bucket.getAtoms() ) {
                 final AtomNode atomNode = new AtomNode( mvt, atom );
+                atomNodeMap.put( atom.getAtomInfo(), atomNode );
                 atomLayer.addChild( atomNode );
 
                 // Add a drag listener that will move the model element when the user
@@ -57,6 +62,17 @@ public class KitView {
                     protected void startDrag( PInputEvent event ) {
                         super.startDrag( event );
                         atom.setUserControlled( true );
+
+                        // move the atom (and its entire molecule) to the front when it starts being dragged
+                        MoleculeStructure molecule = kit.getMoleculeStructure( atom );
+                        if ( molecule != null ) {
+                            for ( Atom moleculeAtom : molecule.getAtoms() ) {
+                                atomNodeMap.get( moleculeAtom ).moveToFront();
+                            }
+                        }
+                        else {
+                            atomNode.moveToFront();
+                        }
                     }
 
                     @Override
